[tool.poetry]
name = "pyorthanc"
version = "1.13.0"
description = "Orthanc REST API python wrapper with additional utilities"
authors = [
    "Gabriel Couture <gacou54@gmail.com>",
    "Yannick Lemaréchal <yannick.lemarechal.1@ulaval.ca>",
]
license = "MIT"
readme = 'README.md'
homepage = "https://gacou54.github.io/pyorthanc/"
repository = "https://github.com/gacou54/pyorthanc"
keywords = ["Orthanc", "DICOM", "Medical-Imaging"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"
pydicom = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
simple-openapi-client = "^0.5.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.6"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
