[tool.poetry]
name = "pyorthanc"
version = "1.22.0"
description = "Orthanc REST API python wrapper with additional utilities"
authors = [
    "Gabriel Couture <gacou54@gmail.com>",
    "Yannick Lemaréchal <yannick.lemarechal.1@ulaval.ca>",
]
license = "MIT"
readme = 'README.md'
homepage = "https://gacou54.github.io/pyorthanc/"
repository = "https://github.com/gacou54/pyorthanc"
keywords = ["Orthanc", "DICOM", "Medical-Imaging"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.24.1,<1.0.0"
pydicom = ">=2.3.0,<4.0.0"
tqdm = { version = "^4.66.1", optional = true }

[tool.poetry.extras]
progress = ["tqdm"]
all = ["tqdm"]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }
mkdocs-material = "^9.4.6"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
simple-openapi-client = "^0.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
